# scas

./: CMakeLists.txt  README.md  default.nix  flake.nix  package.nix
.github/workflows/: nix-build.yml
src/: hash.cpp  hash.h  hash_test.cpp  scas.cpp  store.cpp  store.h  store_test.cpp
